--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "eth-marketplace",
   "version": "0.1.0",
-  "description": "An Ethereum Marketplace",
-  "author": "gregory@dappuniversity.com",
+  "description": "Plataforma de intercambio de energia renovable",
+  "author": "ytcesarjs@gmail.com",
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
@@ -19,11 +19,12 @@
     "react-dom": "16.8.4",
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
+    "truffle-assertions": "^0.9.2",
     "web3": "1.0.0-beta.55"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
